[package]
name = "blog_os"
version = "0.1.0"
authors = ["Mackenzie Clark <mackenzie.a.z.c@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.6.0"
spin = "0.4.9"
volatile = "0.2.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


#[profile.dev]
#panic = "abort"

#[profile.release]
#panic = "abort"
